vlib/v/checker/tests/check_incompatible_struct.out
vlib/v/checker/tests/check_incompatible_struct.vv:17:6: error: struct `Foo` is not compatible with struct `Bar`
   15 |     }
   16 |     bar3 := Bar{
   17 |         ...foo
      |            ~~~
   18 |         b: 1
   19 |     }
vlib/v/checker/tests/check_incompatible_struct.vv:26:6: error: struct `Foo` is not compatible with struct `Bar`
   24 |     }
   25 |     bar := Bar{
   26 |         ...foo
      |            ~~~
   27 |     }
   28 |     print(bar)
